--- a/HHP/app/src/main/res/values/strings.xml
+++ b/HHP/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HHP</string>
+    <string name="app_name">Employee Tracker</string>
     <string name="action_settings">Settings</string>
     <string name="employee">Employee</string>
     <string name="employer">Employer</string>
